# tuple_tricks

./: .gitconfig  .gitignore  Cargo.toml  LICENSE  README.md
examples/: tuple_addition.rs  tuple_induction.rs
make_tuple_traits/: Cargo.toml  README.md
make_tuple_traits/src/: lib.rs
mark_tuple_traits/: Cargo.toml  README.md
mark_tuple_traits/src/: lib.rs
tuple_tricks/: Cargo.toml  README.md
tuple_tricks/examples/: tuple_induction.rs
tuple_tricks/src/: lib.rs
