[package]
name = "tuple_tricks_workspace"
version = "0.1.1"
authors = ["Jan Crisitna <jan.cristina@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Top-level repo for 'tuple_tricks'"
homepage = "https://github.com/jcrist1/tuple_tricks/"
repository = "https://github.com/jcrist1/tuple_tricks/"

[workspace]
members = [
    "tuple_tricks",
    "make_tuple_traits",
    "mark_tuple_traits",
]

[dev-dependencies]
tuple_tricks = { path = "tuple_tricks"}
mark_tuple_traits = { path = "mark_tuple_traits" }
rand = "0.8"
rand_distr = "0.4"
