[package]
name = "mark_tuple_traits"
version = "0.1.1"
edition = "2018"
authors = ["Jan Cristina <jan.cristina@gmail.com>"]
license = "MIT"
description = "a proc_macro for marking tuples of length up to 32 with a single marker trait to bypass the 'fundamental' feature"
homepage = "https://github.com/jcrist1/tuple_tricks/"
repository = "https://github.com/jcrist1/tuple_tricks/"
keywords = ["tuple", "generic", "proc_macro"]
readme = "README.md"


[lib]
proc_macro = true

[dependencies]
