[package]
name = "tuple_tricks"
version = "0.2.1"
description = "A couple of traits on tuples that allow inductively building new traits"
license = "MIT"
authors = ["Jan Cristina <jan.cristina@gmail.com>"]
edition = "2018"
homepage = "https://github.com/jcrist1/tuple_tricks/tuple_tricks"
repository = "https://github.com/jcrist1/tuple_tricks/tuple_tricks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = false

[dependencies]
make_tuple_traits = { path= "../make_tuple_traits", version = "0.2"}

